--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
+html {
+    font-size: 15px;
+}
 #navigation .navbar {
     background-color: #424242;
 }
 
 #navigation .navbar-brand {
     color: turquoise;
-    font-size: 2.8rem;
+    font-size: 1.8rem;
     font-weight: 700;
 }
 
@@ -38,7 +41,7 @@
 #about h1 {
     color: turquoise;
     font-weight: 700;
-    font-size: 10.8rem;
+    font-size: 2.8rem;
 }
 
 #about .text-biography {
@@ -128,7 +131,6 @@
 
 * {
     box-sizing: border-box;
-    font-size: 16px;
 }
 
 body {
@@ -205,4 +207,24 @@ hr {
 
 .footer-item {
     color: #25292D;
+}
+@media (orientation: portrait) {
+
+}
+
+@media screen and (max-width: 400px) {
+    
+    .navbar-brand {
+        max-width: 70vh;
+    }
+    body {
+       padding-left: 5rem;
+       padding-right: 5rem;
+    }
+    html {
+        font-size: 8px;
+    }
+    h1 {
+        font-size: 1rem;
+    }
 }
