--- a/css/style.css
+++ b/css/style.css
@@ -212,17 +212,23 @@ hr {
 
 }
 
-@media screen and (max-width: 400px) {
-    
+@media screen and (max-width: 380px) {
+    .pulse {
+        width: 20px;
+        height: 20px;
+    }
+    img {
+        width: 100px;
+    }
     .navbar-brand {
         max-width: 60vh;
     }
-    body {
+    body { 
        padding-left: 5rem;
        padding-right: 5rem;
     }
     html {
-        font-size: 8px;
+        font-size: 7px;
     }
     h1 {
         font-size: 1rem;
